--- a/ICCV/supplementary/stitching_supplementary.tex
+++ b/ICCV/supplementary/stitching_supplementary.tex
@@ -42,26 +42,22 @@ browser (or alternative).
 % MGP Done
 % SC can you put a thumbnail picture for reference?
 % MGP Done
-\hrule
 
-\href{videos/teaser.avi}{Video} related to Figure
-1~\includegraphics[width=1cm]{figures/teaserThumbail.png} in the paper.
+\vspace{7 mm}
+\href{videos/teaser.avi}{Video} related to Figure 1 in the paper.
 One can immediately observe that the quadcopter is flying autonomously; the control of the quadcopter,
 especially in outdoor environment, is a difficult problem but is unrelated to the computer vision task
 discussed in this paper.
 
-\hrule
-\href{videos/lady1.avi} {Video} related to Figure
-7~\includegraphics[width=1cm]{figures/lady1Thumbail.png} in main paper.
+\href{videos/lady1.avi} {Video} related to Figure 7 in main paper.
 
-\hrule
 
-\href{videos/greenRed.avi} {Video} related to Figure
-8~\includegraphics[width=1cm]{figures/greenRedThumbail.png} in main paper.
+\href{videos/greenRed.avi} {Video} related to Figure 8 in main paper.
 
-\hrule
-This section contains an additional result, i.e., an entry not in the main paper.  We want to emphasize that we have performed several experiments,
-and this is yet another example.  
+\vspace{7 mm}
+
+This section contains additional results, i.e., entries not in the main paper.  We want to emphasize that we have performed several experiments,
+and these are some representative examples whose result we may not be able to put in main paper due to size restriction.
 %We are not including all ``new" examples.
 % SC Your latex citation is not appearing (see Autostitch in the caption
 % MGP Done
@@ -69,31 +65,30 @@ and this is yet another example.
 % SC so that there is no confusion between this FIgure 1 and the Figure 1 in the main paper
 % MGP Done
 
-
+\vspace{3 mm}
 The input \href{videos/lady2.avi}{stream} had about 9000 images. The
 selection algorithm of Section 3 pruned the video into $N=15$ images. The scene as captured by a typical camera 
-can  be seen in
+can  be seen in 
 Figure~\ref{fig:validResults}(a). A sample of the
 selected images are seen in Figure~\ref{fig:validResults}(b).
 Figure~\ref{fig:validResults}(c,d,e) shows the comparison of outputs of the state
-of the art stitching methods with the output of our algorithm. The input videos
-are such that there are no vacant
+of the art stitching methods with the output of our algorithm. The input scene
+is such that there are no vacant
 spaces; our stitching algorithm's output is similar to that of Autostitch
-\cite{autostitch} as well as Photoshop \cite{photoshop}.
+\cite{autostitch} as well as Photoshop \cite{photoshop}. Results on this dataset again demonstrates that programs like Autostitch, Photoshop can correctly stitch images selected by our algorithm (when there are no vacant spaces). 
 
 
 \begin{figure*}[h!]
 \centering
 \includegraphics[width=0.87\linewidth]{figures/lady2.pdf}
-\caption{ (a) Uniformly sampled images from an outdoor video
-  expedition.  (b) Salient image selection from the set of
+\caption{ (a) An outdoor scene captured by a standard camera.  (b) Salient image selection from the set of
   approximately 9000 images using positional information. (c) Output from
-  Autostitch \cite{autostitch} (d) Output from Adobe Photoshop CS6
-  \cite{photoshop} output (e) Output from this paper.}
+  Autostitch \cite{autostitch} on the images selected by our algorithm. (d) Output from Adobe Photoshop CS6
+  \cite{photoshop} output on the selected images. (e) Output from this paper.}
 \label{fig:validResults}
 \end{figure*}
 
-\hrule
+
 % 
 % \begin{figure*}[h!]
 % \centering
@@ -114,6 +109,17 @@ spaces; our stitching algorithm's output is similar to that of Autostitch
 % of the art stitchers with the output of our algorithm. As there are no vacant
 % spaces, our stitching algorithm's output is similar to that of Autostitch as
 % well as Photoshop.
+\vspace{5 mm}
+
+The input \href{videos/orangeBlue.avi}{stream} had about 9100 images. The
+selection algorithm pruned the video into $N=28$ images. The scene as captured by a smartphone can also be seen in
+Figure~\ref{fig:results1}(a). A sample of the
+selected images are seen in Figure~\ref{fig:results1}(b).
+Figure~\ref{fig:results1}(c,d,e) shows the comparison of outputs of state
+of the art stitchers with the output of our algorithm. As there are vacant
+spaces, Autostitch~\cite{autostitch} as well as Photoshop~\cite{photoshop} are
+unable to stitch images accurately. In contrast, since we use positional data, our output is an acceptable mosaic, and shows
+an orthographic view. 
 
 \begin{figure*}[h!]
 \centering
@@ -133,17 +139,17 @@ spaces; our stitching algorithm's output is similar to that of Autostitch
 \label{fig:results1}
 \end{figure*}
 
-The input \href{videos/orangeBlue.avi}{stream} had about 9100 images. The
-selection algorithm pruned the video into $N=28$ images. The scene as captured by a smartphone can also be seen in
-Figure~\ref{fig:results1}(a). A sample of the
-selected images are seen in Figure~\ref{fig:results1}(b).
-Figure~\ref{fig:results1}(c,d,e) shows the comparison of outputs of state
+\vspace{4 mm}
+
+The input \href{videos/purpleRed.avi}{stream} had about 8500 images. The
+selection algorithm pruned the video into $N=17$ images.The scene as captured by a smartphone can also be seen in
+Figure~\ref{fig:results2}(a). A sample of the
+selected images are seen in Figure~\ref{fig:results2}(b).
+Figure~\ref{fig:results2}(c,d,e) shows the comparison of outputs of state
 of the art stitchers with the output of our algorithm. As there are vacant
 spaces, Autostitch~\cite{autostitch} as well as Photoshop~\cite{photoshop} are
-unable to stitch images accurately. In contrast, since we use positional data, our output is an acceptable mosaic, and shows
-an orthographic view. 
+not able to stitch images accurately. But, as we are using IMU data, our output is closest to input scene.
 
-\hrule
 \begin{figure*}[h!]
 \centering
 \includegraphics[width=0.85\linewidth]{figures/Purple_red.pdf}
@@ -159,16 +165,7 @@ an orthographic view.
   vacant space) using IMU data.}
 \label{fig:results2}
 \end{figure*}
-	
-The input \href{videos/purpleRed.avi}{stream} had about 8500 images. The
-selection algorithm pruned the video into $N=17$ images.The scene as captured by a smartphone can also be seen in
-Figure~\ref{fig:results2}(a). A sample of the
-selected images are seen in Figure~\ref{fig:results2}(b).
-Figure~\ref{fig:results2}(c,d,e) shows the comparison of outputs of state
-of the art stitchers with the output of our algorithm. As there are vacant
-spaces, Autostitch~\cite{autostitch} as well as Photoshop~\cite{photoshop} are
-not able to stitch images accurately. But, as we are using IMU data, our output is closest to input scene.
-	
+		
 \bibliographystyle{ieee}
 \bibliography{egbib}	
 \end{document}
